# mDOM_IceColumn

./: .gitignore  211101_withHarness.code-workspace  CMakeLists.txt  README.md  mdom.cc  mdom.gps  refraction.cfg
ana/: ana.py
aux/: PMT_geo.txt  UserRadData_z19.a40  VitrovexRefIndex.cfg  init_vis.mac  init_vis.mac~  lightspectrum_10.cfg  lightspectrum_11.cfg  lightspectrum_4.cfg  lightspectrum_5.cfg  lightspectrum_6.cfg  lightspectrum_7.cfg  lightspectrum_8.cfg  lightspectrum_9.cfg  lightspectrum_test.cfg  processedlightspectrum_10_level_0_ext0.cfg  processedlightspectrum_10_level_0_ext1.cfg  processedlightspectrum_10_level_0_ext2.cfg  processedlightspectrum_10_level_0_ext3.cfg  processedlightspectrum_10_level_1_ext0.cfg  processedlightspectrum_10_level_1_ext1.cfg  processedlightspectrum_10_level_1_ext2.cfg  processedlightspectrum_10_level_1_ext3.cfg  processedlightspectrum_10_level_2_ext0.cfg  processedlightspectrum_10_level_2_ext1.cfg  processedlightspectrum_10_level_2_ext2.cfg  processedlightspectrum_10_level_2_ext3.cfg  processedlightspectrum_11_level_0_ext0.cfg  processedlightspectrum_11_level_0_ext1.cfg  processedlightspectrum_11_level_0_ext2.cfg  processedlightspectrum_11_level_0_ext3.cfg  processedlightspectrum_11_level_1_ext0.cfg  processedlightspectrum_11_level_1_ext1.cfg  processedlightspectrum_11_level_1_ext2.cfg  processedlightspectrum_11_level_1_ext3.cfg  processedlightspectrum_11_level_2_ext0.cfg  processedlightspectrum_11_level_2_ext1.cfg  processedlightspectrum_11_level_2_ext2.cfg  processedlightspectrum_11_level_2_ext3.cfg  processedlightspectrum_12_level_2_ext3.cfg  processedlightspectrum_4_level_0_ext0.cfg  (+73 more)
include/: OMSimDataFileTypes.hh  OMSimDetectorConstruction.hh  OMSimInputData.hh  OMSimLogger.hh  OMSimPMTConstruction.hh  abcDetectorComponent.hh  mdomAnalysisManager.hh  mdomEventAction.hh  mdomMinimization.hh  mdomPhysicsList.hh  mdomPrimaryGeneratorAction0.hh  mdomPrimaryGeneratorAction1.hh  mdomPrimaryGeneratorAction2.hh  mdomPrimaryGeneratorAction3.hh  mdomRunAction.hh  mdomSNTools.hh  mdomStackingAction.hh  mdomSteppingAction.hh  mdomSteppingVerbose.hh  mdomTrackingAction.hh
reconstruct/: event1.cfg  event1.txt  event10.txt  event11.txt  event12.txt  event13.txt  event14.txt  event2.cfg  event2.txt  event3.cfg  event3.txt  event4.cfg  event4.txt  event5.txt  event6.txt  event7.txt  event8.txt  (+1 more)
(+26 files in other folders)
